# clean_fastapi

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini
app/: database.py  database_models.py
app/application/: unit_of_work.py
app/application/commands/: note_commands.py
app/application/ports/: email_sender.py  password_hasher.py
app/application/queries/: note_queries.py
app/application/services/: auth_service.py  email_service.py  note_service.py  user_service.py
app/common/: messaging.py  security.py
app/container/: __init__.py  application_container.py  container.py  infrastructure_container.py  interface_container.py  main_container.py
app/core/: config.py
app/dependencies/: auth_provider.py  crypto_provider.py
app/domain/: note.py  note_repository.py  user.py  user_repository.py
app/infra/: unit_of_work.py
app/infra/adapters/: argon2_password_hasher.py  celery_email_sander.py
app/infra/models/: note_db_model.py  user_db_model.py
app/infra/repositories/: note_repository_sqlalchemy.py  user_repository_sqlalchemy.py
app/interfaces/: auth_controller.py  base_controller.py  note_controller.py  user_controller.py
app/schemas/: auth_request.py  note_request.py  note_response.py  user_request.py  user_response.py
project/: database_models.py
project/src/auth/: container.py  service.py  settings.py
project/src/database/: __init__.py  container.py  database.py  settings.py
project/src/infrastructure/: __init__.py  argon2_password_hasher.py  celery_app.py  container.py  email_sender.py  jwt_provider.py  settings.py  unit_of_work.py
project/src/note/: __init__.py  container.py  domains.py  entities.py  repository.py  service.py  settings.py
project/src/note/cqrs/: commands.py  queries.py
project/src/shared/: exceptions.py  security.py
project/src/user/: container.py  domains.py  entities.py  repository.py  service.py  settings.py
project/webapp/: app.py  container.py  deps.py  dtos.py  settings.py
project/webapp/common/: error_handlers.py  mappers.py  pagination.py  setup_middleware.py
project/webapp/middlewares/: logging.py  performance.py  request_id.py
project/webapp/routers/: __init__.py  auth.py  health.py  mapper.py  note.py  user.py
utils/: crypto.py  pagination.py
