[project]
name = "clean-Fastapi"
version = "0.1.0"
author = [
    {name = "soyeonlee", email = "soyeonlee@publicai.co.kr"}
]
description = "FastAPI로 배우는 백엔드 프로그래밍 with 클린 아키텍쳐 : 모던 파이썬 웹 프레임워크 FastAPI로 TIL 앱 구축하기"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Fastapi[standard]==0.116.1",
    "passlib[argon2]==1.7.4",
    "dependency-injector==4.42.0",
    "asyncpg==0.30.0", #고성능 비동기 포스트그레 드라이버
    "SQLAlchemy==2.0.36",
    "alembic==1.14.0",
    "pydantic-settings==2.6.1",
    "psycopg[binary]==3.2.3",
    "greenlet==3.1.1",
    "PyJWT[crypto]==2.9.0",

    "celery==5.4.0",         # Celery 최신 안정판
    "kombu==5.3.7",          # Celery 내부 메시징 라이브러리 (RabbitMQ 호환)
    "billiard==4.2.0",       # 멀티프로세싱 지원 (Celery 필수 의존성)
    "amqp==5.2.0",           # RabbitMQ와 직접 통신하는 드라이버
    "psycopg2-binary==2.9.9",# Celery 결과 백엔드 (동기 드라이버)
    
    "aiohttp>=3.8.0", #HTTP 클라이언트 (사용자 추가 스크립트용)
]